--- a/style.css
+++ b/style.css
@@ -49,9 +49,8 @@ section{
     border-radius: 5px;
     height: 80%;
     background-color: white;
-
 }
-.experience-area{
+.Experience-Area{
     background-image: url("images/a.png");
     background-repeat: no-repeat;
     background-position: left;
@@ -65,5 +64,4 @@ section{
     border-left: 7px solid;
     border-image: linear-gradient(180deg,blue,cyan);
     border-image-slice: 1;
-}
 }
